# depzip

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile.in  README.md  depzip-config.cmake  depzip_schema.json  version.cmake
.github/workflows/: ci.yml  release.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
ext/: CMakeLists.txt  depzip.json
install_test/: script.cmake
install_test/exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/depzip/: config.hpp  instance.hpp  json_io.hpp  manifest.hpp  package_info.hpp  panic.hpp  verbosity.hpp
lib/src/: build_version.hpp.in  depzip.cpp
lib/src/detail/: git.hpp  log.hpp  logger.hpp  package.hpp  panic.hpp  program.hpp  shell.hpp  string_builder.hpp  util.hpp  workspace.hpp  zip.hpp
lib/src/detail/programs/: git.hpp  zip.hpp
tests/: CMakeLists.txt  test_instance.cpp
